# Bovine-Ballistics

./: Cargo.toml  README.md  build.rs
data/: settings.json
src/: helpers.rs  main.rs
src/calculator/: mod.rs
src/networktables_interface/: mod.rs  publisher.rs
src/web_interface/: mod.rs
static/: index.html  settings.html
