[package]
name = "Bovine-Ballistics"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
serde_json = "1.0.141"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs"] }
prost = "0.12.6"
prost-types = "0.12.6"
tokio-tungstenite = "0.28.0"
futures = "0.3.31"
bincode = { version = "2.0", features = ["serde"] }
bytes = "1.10.1"
anyhow = "1.0.100"
nt_client = "0.4.0"
lazy_static = "1.5.0"
tracing-subscriber = "0.3.22"
tracing = "0.1.41"

[build-dependencies]
prost-build = "0.12.6"
